<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoUsuario">

    <TextView
        android:id="@+id/txt_pedido"
        android:text="@string/novoCo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        style="@style/textTittleStyle"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_nome"
        style="@style/textBodyStyle"
        android:hint="@string/nome"
        android:inputType="text"
        android:background="@drawable/form_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintTop_toBottomOf="@id/txt_pedido"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        style="@style/textBodyStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/form_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_re"
        style="@style/textBodyStyle"
        android:hint="@string/re"
        android:inputType="text"
        android:background="@drawable/form_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/form_background"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintTop_toBottomOf="@id/edit_re"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/radio_expedidor"
            style="@style/textBodyStyle"
            android:text="@string/expedidor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_motorista"
            style="@style/textBodyStyle"
            android:text="@string/moto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_deletar"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_red"
            android:layout_marginLeft="10dp"
            style="@style/buttonCleanStyle"
            android:text="@string/deletar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvar"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_green"
            android:layout_marginRight="10dp"
            style="@style/buttonCleanStyle"
            android:text="@string/salvar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>