<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginForm">

    <ImageView
        android:id="@+id/img_logo"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo">

        <EditText
            android:id="@+id/edit_login"
            style="@style/textBodyStyle"
            android:hint="@string/login"
            android:background="@drawable/form_background"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/textBodyStyle"
            android:background="@drawable/form_background"
            android:inputType="numberPassword"
            android:hint="@string/senha"
            app:layout_constraintTop_toBottomOf="@id/edit_login"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/buttonStyle"
            android:text="@string/entrar"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/ProgressBar"
            android:visibility="invisible"
            android:indeterminateTint="@color/lawn_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>