<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhamentoEntrega">


    <TextView
        android:id="@+id/txt_coleta"
        android:text="@string/entrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        style="@style/textTittleStyle"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_info"
        android:background="@drawable/background_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintTop_toBottomOf="@id/txt_coleta">

        <TextView
            android:id="@+id/txt_nf"
            android:text="NF: 300000"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_hora"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_hora"
            android:text="Hora: 15:00"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_nf"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintTop_toBottomOf="@id/txt_nf">

            <TextView
                android:id="@+id/txt_observacao"
                android:layout_width="wrap_content"
                style="@style/textBodyStyle"
                android:padding="0dp"
                android:text="Observações:"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_info_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintTop_toBottomOf="@id/view_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/img_cam"
            android:layout_width="wrap_content"
            style="@style/buttonStyle"
            android:src="@drawable/ic_camera"
            android:layout_height="@dimen/larguraBotao"
            app:layout_constraintTop_toTopOf="@id/edit_recebedor"
            app:layout_constraintStart_toStartOf="@id/btn_salvar"/>

        <EditText
            android:id="@+id/edit_recebedor"
            android:layout_width="260dp"
            android:hint="Nome do recebedor..."
            android:layout_height="@dimen/larguraBotao"
            style="@style/textBodyStyle"
            android:background="@drawable/form_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_cam"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_foto"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_info_2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="@dimen/MarginDefault"
        android:layout_marginRight="@dimen/MarginDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_deletar"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_red"
            android:layout_marginLeft="10dp"
            style="@style/buttonCleanStyle"
            android:text="@string/deletar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvar"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_green"
            android:layout_marginRight="10dp"
            style="@style/buttonCleanStyle"
            android:text="@string/salvar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>